# learningplatform

./: .gitignore  Dockerfile  README.md  dev_example_data.json  dumpdata_call.txt  functional_tests.py  manage.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: push-workflow.yml
course/: views.py
frontend/: .env  .gitignore  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.ts
home/: admin.py  models.py  tests.py  views.py
home/migrations/: 0003_announcement.py  0004_notenrolled.py
learningplatform/: api.py  urls.py  wsgi.py
learningplatform/settings/: base.py  dev.py
learningplatform/templates/: base.html
materials/: admin.py  models.py  tests.py  views.py
materials/migrations/: 0001_initial.py  0002_auto_20211207_1124.py  0003_auto_20211224_1352.py  0004_section_time_to_complete.py  0005_section_stream.py  0006_auto_20220118_0145.py  0007_textbook_description.py  0008_auto_20220326_1633.py  0009_auto_20220327_1958.py  0010_resourceaccess.py  0011_resourceaccess_access_time.py  0012_resource_resource_type.py  0013_alter_resource_resource_type.py  0014_topic.py  0015_auto_20220328_0154.py  0016_rename_topic_resource_topics.py  0017_alter_section_slides.py  0018_tip.py  0019_auto_20220806_1917.py  0020_alter_section_slides.py  0021_notes.py  0022_rename_notes_note.py  0023_auto_20221005_0244.py  0024_alter_section_slides.py
settings/templates/: site_base.html
static/: staticfiles.json
tests/: test_urls.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+87 files in other folders)
